# training-agents

./: .env.example  .gitignore  README.md  pyproject.toml
data/scenarios/: sample.json
data/scenarios/uploads/: 上益城郡御船町_体制構築_シナリオ_20251006_005553.xlsx  熊本市all_指揮判断_シナリオ_20251015_111722.xlsx
frontend/src/: App.tsx
frontend/src/components/: AdminDashboard.tsx  Dashboard.tsx  SessionSetup.tsx  SimClock.tsx  SimulationChat.tsx  StatusPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: simulation.ts
src/agents/: base_agent.py  department_agents.py  resident_agent.py  scenario_master.py
src/agents/prompts/: departments.py  resident.py  scenario_master.py
src/api/: app.py
src/api/routes/: admin.py  scoring.py  sessions.py  simulation.py
src/difficulty/: profiles.py
src/engine/: adaptation_engine.py  event_scheduler.py  message_bus.py  scenario_updater.py  simulation_clock.py  simulation_runner.py  state_manager.py  task_manager.py
src/loaders/: scenario_loader.py
src/models/: enums.py  messages.py  scenario.py  scenario_revision.py  scoring.py  session.py  state.py  tasks.py
src/scoring/: evaluator.py
src/tools/: tool_registry.py
