[project]
name = "training-agents"
version = "0.1.0"
description = "防災訓練自動化システム - AI Agent-based Disaster Training Simulation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "openai>=1.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.8.0",
    "openpyxl>=3.1.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
